nqrmql cqmmqt, nqthqng tq sqq hqrq.

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 
 <body>
-	<button onclick="playsong()">button</button>
-	<audio src = "audio.mp3" id = "song" ended="celebrate">
-	your browser is outdated :( sorry for any inconvenience!
+	<button onclick="corn()">button</button>
+	<audio src = "corn.wav" id = "corn">
+	your browser is outdated :(
 	</audio>
 	<section>
 		<p id="text">
@@ -19,11 +19,7 @@
 </body>
 
 <script>
-function playsong()	{
-	document.getElementById("song").play()
-	document.getElementById("text").innerText = "woooooo"
-}
-function celebrate()	{
-	document.getElementById("text").innerText = "nice song, huh"
-}
+function corn()	{
+	document.getElementById("corn").play()
+	document.getElementById("text").innerText = "the corn mints?"
 </script>
