--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 
 <body>
-	<button onclick="corn()">button</button>
-	<audio src = "corn.wav" id = "corn">
+	<button onclick="playcorn()">button</button>
+	<audio src = "corn.wav" id = "cornaudio">
 	your browser is outdated :(
 	</audio>
 	<section>
@@ -19,7 +19,7 @@
 </body>
 
 <script>
-function corn()	{
-	document.getElementById("corn").play()
+function playcorn()	{
+	document.getElementById("cornaudio").play()
 	document.getElementById("text").innerText = "the corn mints?"
 </script>
