--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
 	<button onclick="playcorn()">button</button>
-	<audio src = "corn.wav" id = "cornaudio">
+	<audio src = "corn.mp3" id = "cornaudio">
 	your browser is outdated :(
 	</audio>
 	<section>
