--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 </head>
 
 <body>
-	<button onclick="playcorn()">button</button>
+	<button onclick="playcorn()">funny</button>
 	<audio src = "corn.mp3" id = "cornaudio">
 	your browser is outdated :(
 	</audio>
 	<section>
 		<p id="text">
-		food stuff
+		mmmmmmm
 		</p>
 	</section>
 </body>
