--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<p id="text">
 		new text!!
 		</p>
-		<img src = "catfacebig.png"> </img>
+		<img src = "catfacebig.png" width = 256 height = 256> </img>
 	</section>
 </body>
 
